--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -1,87 +1,4 @@
-<div class="camera-wrapper">
-	<div id="my_camera">
-		
-	</div>		
-		<span class="check-done">
-			<img src="images/check.svg" alt="checkmark">
-			We got it!
-		</span>
-		<img src="images/focus.svg" alt="focus" class="focusing not-display">
-		<img src="images/focus.svg" alt="focus" class="focusing2 not-display">
-		<img src="images/focus.svg" alt="focus" class="focusing3 not-display">
-		<!-- A button for taking snaps -->
-		<form class="snap-button-wrapper">
-			<div>
-				<input type="button" class="snap-button" onClick="take_snapshot()"><br>
-				<span class="camera-icon">
-					<img src="images/SVG/uniE606.svg" alt="camera icon">
-				</span>
-			</div>
-		</form>
-	<!-- <div id="results">Your captured image will appear here...</div> -->
-	<h4>Pick a colour that represents your mood.</h4>
-	<div class="horizontal-container row">
-		<div class="colour-wrapper">
-			<ul class="list-inline">
-				<li class="poppy-red element-item">
-					<span class="colour-box"></span>
-					<div class="colour-box-hover">poppy<br>red</div>
-				</li>
-				<li class="nectarine element-item">
-					<span class="colour-box"></span>		
-					<div class="colour-box-hover">nectarine</div>
-				</li>
-				<li class="lemon-zest element-item">
-					<span class="colour-box lemon-zest"></span>		
-					<div class="colour-box-hover">lemon<br>zest</div>
-				</li>
-				<li class="tender-shoots element-item">
-					<span class="colour-box"></span>		
-					<div class="colour-box-hover">tender<br>shoots</div>
-				</li>
-				<li class="emerald element-item">
-					<span class="colour-box"></span>		
-					<div class="colour-box-hover">emerald</div>
-				</li>
-				<li class="dusk-blue element-item">
-					<span class="colour-box"></span>		
-					<div class="colour-box-hover">dusk<br>blue</div>
-				</li>
-				<li class="african-violet element-item">
-					<span class="colour-box"></span>		
-					<div class="colour-box-hover">african<br>violet</div>
-				</li>
-				<li class="ballerenia-pink element-item">
-					<span class="colour-box"></span>		
-					<div class="colour-box-hover">ballerenia<br>pink</div>
-				</li>
-				<li class="pewter-grey element-item">
-					<span class="colour-box"></span>			
-					<div class="colour-box-hover">pewter<br>grey</div>
-				</li>
-				<li class="black element-item">
-					<span class="colour-box"></span>			
-					<div class="colour-box-hover">black</div>
-				</li>
-				<li class="camping-brown element-item">
-					<span class="colour-box"></span>
-					<div class="colour-box-hover">camping<br>brown</div>
-				</li>
-				<li class="white element-item">
-					<span class="colour-box"></span>	
-					<div class="colour-box-hover">white</div>
-				</li>
-			</ul>
-		</div>
-	</div>
-</div>
-
-<a href="/story" class="openStoryPage">next page</a>
-
-
-
-
-
-
-
-
+<video autoplay loop poster="images/poster.png" id="bgvid">
+	<source src="images/testing-smog.webm" type="video/webm">
+	<source src="images/testing-smog.mp4" type="video/mp4">
+</video>
