--- a/views/main/story.ejs
+++ b/views/main/story.ejs
@@ -70,7 +70,7 @@
 
 	<div id="content">
 		<section id="flavor-1">
-			<div class="inner-wrapper african-violet">
+			<div class="inner-wrapper violet-pattern">
 				<div class="flavor-box">
 					<h2 class="pull-right">
 						Sweet
@@ -92,14 +92,20 @@
 					<div class="teacup">
 						<img src="images/cup.png" alt="tea cup">	
 					</div>	
+					<div class="journey-button-wrapper">
+						<span class="journey-button">
+							Start the journey
+						</span>
+					</div>
 				</div>
+				
 			</div>
 			
 			<!-- <iframe width="560" height="315" src="//www.youtube.com/embed/90qhv3IMfuw" frameborder="0" allowfullscreen></iframe> -->
 			
 		</section>
 		<section id="flavor-2">
-			<div class="inner-wrapper dusk-blue">
+			<div class="inner-wrapper blue-pattern">
 				<div class="flavor-box">
 					<h2 class="pull-right">
 						Floral
@@ -108,7 +114,7 @@
 			</div>
 		</section>
 		<section id="flavor-3">
-			<div class="inner-wrapper camping-brown">
+			<div class="inner-wrapper brown-pattern">
 				<div class="flavor-box">
 					<h2 class="pull-right">
 						Nutty
@@ -117,7 +123,7 @@
 			</div>
 		</section>
 		<section id="flavor-4">
-			<div class="inner-wrapper nectarine">
+			<div class="inner-wrapper orange-pattern">
 				<div class="flavor-box">
 					<h2 class="pull-right">
 						Fruity
@@ -126,7 +132,7 @@
 			</div>
 		</section>
 		<section id="flavor-5">
-			<div class="inner-wrapper pewter-grey">
+			<div class="inner-wrapper grey-pattern">
 				<div class="flavor-box">
 					<h2 class="pull-right">
 						Chur
@@ -137,7 +143,7 @@
 	</div>
 </div>
 <div class="back-button">
-	<a class="try-again-btn" href="/">
+	<a class="try-again-btn" href="/camera">
 		<img src="images/capture-icon.svg" alt="capture again">
 	</a>
 	<!-- <h5>Capture the <Br>colour again</h5> -->
