--- a/views/main/camera.ejs
+++ b/views/main/camera.ejs
@@ -19,6 +19,7 @@
 			</div>
 		</form>
 	<!-- <div id="results">Your captured image will appear here...</div> -->
+	<div></div>
 	<h4>Pick a colour that represents your mood.</h4>
 	<div class="horizontal-container row">
 		<div class="colour-wrapper">
