--- a/views/main/story.ejs
+++ b/views/main/story.ejs
@@ -34,7 +34,7 @@
 							<h5>
 								Below are different flavor choices
 							</h5>
-							<ul class="slide-control list-inline">
+							<ul class="slide-control list-inline" id="padding-top">
 								<li class="slide-1">
 									<a href="#flavor-1">
 										Sweet
@@ -76,13 +76,13 @@
 						Sweet
 					</h2>
 				</div>
-				<!-- <div class="tea-1" id="home-video">
+				<div class="tea-1" id="home-video">
 					<img src="images/tea-1.png" data-video="//www.youtube.com/embed/90qhv3IMfuw?autoplay=1" alt="tea recommendation" title="Play Video">
 					<span class="play-button">
 						<img src="images/play-button.svg" alt="play-button">
 					</span>
-				</div> -->
-				<div class="recommended-tea">
+				</div>
+				<!-- <div class="recommended-tea">
 					<div class="teabag">
 						<img src="images/teabag.svg" alt="tea bag">
 					</div>
@@ -97,7 +97,7 @@
 							Start the journey
 						</span>
 					</div>
-				</div>
+				</div> -->
 				
 			</div>
 			
