--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -2,3 +2,8 @@
 	<source src="images/testing-smog.webm" type="video/webm">
 	<source src="images/testing-smog.mp4" type="video/mp4">
 </video>
+<div>
+	<a href="/camera" class="btn btn-default landing-button">
+		Choose a colour
+	</a>
+</div>
