--- a/views/main/story.ejs
+++ b/views/main/story.ejs
@@ -55,11 +55,6 @@
 										Fruity
 									</a>
 								</li>
-								<li class="slide-5">
-									<a href="#flavor-5">
-										Chur
-									</a>
-								</li>
 							</ul>
 						</nav>
 					</div>
@@ -76,34 +71,17 @@
 						Sweet
 					</h2>
 				</div>
-				<div class="tea-1" id="home-video">
-					<img src="images/tea-1.png" data-video="//www.youtube.com/embed/90qhv3IMfuw?autoplay=1" alt="tea recommendation" title="Play Video">
-					<span class="play-button">
-						<img src="images/play-button.svg" alt="play-button">
-					</span>
-				</div>
-				<!-- <div class="recommended-tea">
-					<div class="teabag">
-						<img src="images/teabag.svg" alt="tea bag">
-					</div>
-					<div class="mayharvest">
-						<img src="images/mayharvest.png" alt="may harvest">
-					</div>	
-					<div class="teacup">
-						<img src="images/cup.png" alt="tea cup">	
-					</div>	
-					<div class="journey-button-wrapper">
+				<div class="recommended-tea-2" id="home-video-2">
+					<div class="tea-wrapper">
+						<img src="images/4_chamomile.png" alt="namaste">	
 						<span class="journey-button">
 							Start the journey
 						</span>
 					</div>
-				</div> -->
-				
+				</div>
 			</div>
-			
-			<!-- <iframe width="560" height="315" src="//www.youtube.com/embed/90qhv3IMfuw" frameborder="0" allowfullscreen></iframe> -->
-			
 		</section>
+
 		<section id="flavor-2">
 			<div class="inner-wrapper blue-pattern">
 				<div class="flavor-box">
@@ -111,14 +89,31 @@
 						Floral
 					</h2>
 				</div>
+				<div class="recommended-tea" id="home-video">
+					<div class="tea-wrapper">
+						<img src="images/jasmine.png" alt="namaste">	
+						<span class="journey-button">
+							Start the journey
+						</span>
+					</div>
+				</div>
 			</div>
 		</section>
-		<section id="flavor-3">
+		<!-- <section id="flavor-3">
 			<div class="inner-wrapper brown-pattern">
 				<div class="flavor-box">
 					<h2 class="pull-right">
 						Nutty
 					</h2>
+				</div>
+
+				<div class="recommended-tea" id="home-video">
+					<img src="images/3_peppermint.jpg" alt="namaste">
+					<div class="journey-button-wrapper">
+						<span class="journey-button">
+							Start the journey
+						</span>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -129,19 +124,42 @@
 						Fruity
 					</h2>
 				</div>
-			</div>
-		</section>
-		<section id="flavor-5">
-			<div class="inner-wrapper grey-pattern">
-				<div class="flavor-box">
-					<h2 class="pull-right">
-						Chur
-					</h2>
+
+				<div class="recommended-tea" id="home-video">
+					<img src="images/4_chamomile.jpg" alt="namaste">
+					<div class="journey-button-wrapper">
+						<span class="journey-button">
+							Start the journey
+						</span>
+					</div>
 				</div>
 			</div>
-		</section>
-	</div>
+		</section> -->
+	</div><!--End content id-->
 </div>
+
+<!--Include everything in here-->
+<!-- <div class="share-wrapper">
+	 <div class="share-overlay">	 
+		<div class="share-sections">
+			<div class="share-social">
+					<div class="share-text">SHARE THIS <span class="hightext">COLOUR</span></div>
+					<div class="share-content-text"><img src="http://www.tealeaves.com/static/images/social-icons/facebook.png"/> <img src="http://www.tealeaves.com/static/images/social-icons/twitter.png"/> <img src="http://www.tealeaves.com/static/images/social-icons/instagram.png"/></div>
+			</div>
+			 <div class="share-purchase">
+					<div class="share-text">TASTE THIS <span class="hightext">COLOUR</span></div>
+					 <div class="share-content-text">Enjoy this at home &amp; share with your love ones</div>
+					 <div class="share-content-link"><a href="http://www.tealeaves.com/organic-jasmine-pearl">PURCHASE</a></div>
+			</div>
+			<div class="share-collection">
+					<div class="share-text">COLLECT THIS <span class="hightext">COLOUR</span></div>
+					<div class="share-content-link"><a href="#">BEGIN</a></div>
+			</div>
+			</div>
+		</div>
+	 </div>
+</div> -->
+
 <div class="back-button">
 	<a class="try-again-btn" href="/camera">
 		<img src="images/capture-icon.svg" alt="capture again">
