--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -1,9 +1,12 @@
-<video autoplay loop poster="images/poster.png" id="bgvid">
-	<source src="images/testing-smog.webm" type="video/webm">
-	<source src="images/testing-smog.mp4" type="video/mp4">
-</video>
-<div>
-	<a href="/camera" class="btn btn-default landing-button">
-		Choose a colour
-	</a>
+<!-- <video autoplay loop poster="images/poster.png" id="bgvid">
+	<source src="images/landing.webm" type="video/webm">
+	<source src="images/landing.mp4" type="video/mp4">
+</video> -->
+<div class="landing-bg-wrapper">
+	<div class="landing-button-wrapper">
+		<h1>Discover Your Tea Colour</h1>
+		<a href="/camera" class="btn btn-default landing-button">
+			Choose a colour
+		</a>
+	</div>
 </div>
