--- a/views/main/story.ejs
+++ b/views/main/story.ejs
@@ -66,11 +66,11 @@
 	<div id="content">
 		<section id="flavor-1">
 			<div class="inner-wrapper violet-pattern">
-				<div class="flavor-box">
+				<!-- <div class="flavor-box">
 					<h2 class="pull-right">
 						Sweet
 					</h2>
-				</div>
+				</div> -->
 				<div class="recommended-tea-2" id="home-video-2">
 					<div class="tea-wrapper">
 						<img src="images/4_chamomile.png" alt="namaste">	
@@ -84,11 +84,11 @@
 
 		<section id="flavor-2">
 			<div class="inner-wrapper blue-pattern">
-				<div class="flavor-box">
+				<!-- <div class="flavor-box">
 					<h2 class="pull-right">
 						Floral
 					</h2>
-				</div>
+				</div> -->
 				<div class="recommended-tea" id="home-video">
 					<div class="tea-wrapper">
 						<img src="images/jasmine.png" alt="namaste">	
